FIX | GUI - Compose overflow height auto

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -354,7 +354,8 @@ textarea {
   position: relative;
   min-height: 100vh;
   padding-bottom: 2em;
-  overflow: auto;
+  // overflow: hidden;
+  height: fit-content;
 }
 
 .footer {
